--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -78,7 +78,7 @@
       <br><br>
     <p class="mt-5 MAIN-STUFF" id="section2">Bioreactor<br></p>
     </p>
-    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/cad-design-of-the-bioreactor-model.jpeg"
+    <img style="width: 25%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/cad-design-of-the-bioreactor-model.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i><b>Fig1: </b>CAD design of the bioreactor</i>
       </figcaption> <br>
@@ -87,7 +87,7 @@
         allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <center>Batch Packed Bed Bioreactor</center><br><br>
     <br><br>
-    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/substrate-spectrum-and-specificity-of-tcca.png"
+    <img style="width: 55%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/substrate-spectrum-and-specificity-of-tcca.png"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i><b>Fig 2: </b>Substrate spectrum and Specificity of TccA [1].</i>
       </figcaption>
@@ -276,11 +276,11 @@
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i><b>Fig 7: </b>Proposed model for Sparger</i>
       </figcaption><br><br>
-    <p class="mt-3 MAIN-STUFF" id="section6">Pressure Gauge<br></p>
-    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/pressure-gauge.jpeg"
+    <p class="mt-3 MAIN-STUFF" id="section6">Pressure Gauge<br></p><figure>
+    <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/pressure-gauge.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i><b>Fig 8: </b>Proposed Model of Pressure Gauge</i>
-      </figcaption><br><br>
+      </figcaption></figure><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">A pressure-powered system uses pressure gauges to
       measure the fluid intensity in the system to ensure there are no leaks or pressure variations that could impair
       the system's functioning. Hence, to ensure the proper functioning of our bioreactor, we would install a
@@ -496,21 +496,21 @@
       the pyrC gene, but were unsuccessful, suggesting that this gene is irreplaceable by another gene in the bacterium.
       Thus, they found that the pyrC gene is really crucial for the survival of the bacterium [22].
       <br>We obtained the sequence of the ACIAD1150 from the <i>Actinobacter baylyi</i> genome database[23].
-    </p> <br>
-    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/fasta-sequence-kill-switch.png"
+    </p> <br><figure>
+    <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/fasta-sequence-kill-switch.png"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i>FASTA sequence of gene ACIAD1150</i>
-      </figcaption><br><br>
+      </figcaption></figure><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">To ensure that this sequence did not exist in any
       other organism, we ran a FASTA search with a higher expectation value and a lower gap penalty. The closest match
       apart from <i>Acinetobacter baylyi</i>, with 90% identity, was found to be <i>Acinetobacter baumannii</i>
       [24].<br></p>
-    <br>
-    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/similarity-search.png"
+    <br><figure>
+    <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/similarity-search.png"
       class="img-fluid rounded mx-auto d-block mt-4"> <br>
     <figcaption style="text-align:center"> <i>Similarity search of gene ACIAD1150 (Parameters modified to have high expectation value (50) and a lower gap
       opening penalty (-2) to find more possible matches</i>
-      </figcaption><br><br>
+      </figcaption></figure><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> We analyzed the use of <i>Acinetobacter
         baumannii</i> in wastewater treatment plants, to ensure that an off target effect did not occur. After
       conducting a literature review, we can conclude that <i>Acinetobacter baumanii</i> was found to be non essential
@@ -521,11 +521,11 @@
       amino acid of ACIAD1150 and has a 92% on target accuracy was identified.<br>
     </p>
     <br>
-
-    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/tabular-column-kill.png"
+<figure>
+    <img style="width: 90%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/tabular-column-kill.png"
       class="img-fluid rounded mx-auto d-block mt-4"> <br>
     <figcaption style="text-align:center"> <i>Potential guide RNAs as generated using online tools</i>
-      </figcaption><br><br>
+      </figcaption></figure><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">To further bolster the stability of our kill switch,
       we will engineer the plasmid carrying the kill switch to be antibiotic-independent for maintenance by using an
       alternative mechanism such as reporter genes, auxotrophic marker and host specific origin of replication. This
