--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -605,7 +605,7 @@
         </h4>
         <div id="collapse10" class="accordion-collapse collapse show" aria-labelledby="heading10">
           <div class="accordion-body">
-            <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
+            <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/model-dl/eqn-1.png" class="img-responsive rounded mx-auto d-block mt-4">
             <table border="1" style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <tr>
                 <th>Parameter</th>
