--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -17,7 +17,7 @@
   <link href="{{ url_for('static', filename='Font_Montserrat.css') }}" rel='stylesheet'>
   <link href="{{ url_for('static', filename='Font_Poppins.css') }}" rel='stylesheet'>
   {% block modal_css %}{% endblock %}
-  <title>{% block title %}Attributions{% endblock %} | MIT_MAHE - iGEM 2023</title>
+  <title>{% block title %}Meet the Team{% endblock %} | MIT_MAHE - iGEM 2023</title>
 </head>
 
 <body style="background: #FFFFFF;">
