--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -182,7 +182,7 @@
             <img src="https://static.igem.wiki/teams/4641/wiki/meet-the-team/rajat-sreeraj.jpeg" alt="Image 14">
             <div class="text">
              <h2>Rajat Sreeraj</h2><br>
-        <h3>Wet Lab<h3> 
+        <h3>Wet Lab</h3> 
               <p>Rajat is an amicable yet quiet person of trustworthy character. He enjoys working in the project
                 lab and is very passionate about all things synthetic biology. He's a huge history nerd and enjoys
                 reading comic books.</p>
