--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -369,7 +369,7 @@
                 <br>
                 <!--Below inference needs to be changed-->
                 Inference: It was observed that the growth of <i>Acinetobacter baylyi</i> was not deterred by
-                variation in the pH. Thus we infer that it would thrive within this pH range typically found in
+                variation in the temperature. Thus we infer that it would thrive within this temperature range typically found in
                 wastewater treatment plants.
               </li>
             </ol>
