added references and changed images

--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -21,7 +21,7 @@
               </a>
             </li>
             <li>
-             <!--<a href="#section4" class="nav-link link-dark">
+             <a href="#section4" class="nav-link link-dark">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
                 Structure Prediction
               </a>
@@ -49,24 +49,24 @@
                 Molecular Dynamic Simulations
               </a>
             </li>
-            <li>  -->
+            <li>  
               <a href="#section9" class="nav-link link-dark">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
                 Growth Modeling
               </a>
             </li>
-            <!--<a href="#section10" class="nav-link link-dark">
+            <a href="#section10" class="nav-link link-dark">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
                 Enzyme Kinetics
               </a>
             </li>
-            <li>-->
+            <li>
               <a href="#section11" class="nav-link link-dark">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
                 Bioreactor Modeling
               </a>
             </li>
-            <li><!--
+            <li>
               <a href="#section12" class="nav-link link-dark">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
                 Introduction
@@ -209,7 +209,7 @@ We modeled the protein production in <i> E.coli </i>. However, in the future, we
 <br><p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
 <b>GRASP</b> shows the amino acid residues that most probably form the binding pocket of the enzyme, out of which Ser 155 and Ser 179 showed 85% confidence scores showing that it interacts and Lys 79 with 59% confidence score showing it is not actively involved in bond cleavage but does help in stabilizing the interactions. The catalytic triad also shows a very high GC content, which is very common across all of the amidases having this triad. These glycines are also involved in stabilizing the structure. In the Ser-Ser-Lys catalytic triad, the lysine polarizes the serine in the middle, forming one strong hydrogen bond with the nucleophilic serine to activate it. Further, the lysine can stabilize the structure, which is crucial for its orientation inside the active site. 
 <br><br></p>
-<img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-9.jpeg" class="img-fluid rounded mx-auto d-block mt-4"> 
+<img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/model-dl/msa.jpeg" class="img-fluid rounded mx-auto d-block mt-4"> 
 <figcaption style="text-align:center"><i>Fig 9: Multiple Sequence alignment was done with <i>Ochrobactrum sp.</i> TCC-2 and other amidases.</i></figcaption>
 <br><p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
 We used <b>Clustal Omega</b> [13] for multiple sequence alignment of p-nitro acetanilide hydrolase (Accession No. -K9NBS6), 6-aminohexanoate-cyclic-dimer hydrolase (Acc No.-P13397), linuron hydrolase(AEO20132),omega-lactams(BAI44731) and our <i>Ochrobactrum sp.</i> TCC-2 amidase. After aligning our amidase with several other biochemically similar amidases, which also have the Ser-Ser-Lys catalytic triad, it was observed that our predicted triad residues perfectly align with all the other ones. This further validates the hypothesis that the catalytic triad was a major active site involved in the interaction between TCC and TccA amidase.
@@ -400,7 +400,7 @@ As shown in <b>Fig 21</b>, the radius of gyration (Rg) fluctuates between 2.15 a
             </div>
     <p class="mt-5 MAIN-STUFF" id="section10"><br>Enzyme Kinetics</p>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
-    <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/model-dl/degradation-pathway.png" class="img-fluid rounded mx-auto d-block mt-4">
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/model-dl/degradation-pathway.png" class="img-fluid rounded mx-auto d-block mt-4">
 <figcaption style="text-align:center"><i>Fig 23: Degradation Pathway of <i>Acinetobacter Baylyi</i>GFJ2 [32]. </figcaption></i>
 </p>
     <br><p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
@@ -801,8 +801,9 @@ Tufféry P & Murail S.
 [31]S. Páll, M. J. Abraham, C. Kutzner, B. Hess, and E. Lindahl, “Tackling exascale software challenges in molecular dynamics simulations with GROMACS,” Lect. Notes Comput. Sci. (including Subser. Lect. Notes Artif. Intell. Lect. Notes Bioinformatics), vol. 8759, pp. 3-27, 2015, doi: 10.1007/978-3-319-15976-8_1/FIGURES/7.
 <br>
 [32] Hongsawat, P., & Vangnai, A. S. (2011). Biodegradation pathways of chloroanilines by Acinetobacter baylyi strain GFJ2. Journal of Hazardous Materials, 186(2-3), 1300-1307<a href=”.https://doi.org/10.1016/j.jhazmat.2010.12.002”>.https://doi.org/10.1016/j.jhazmat.2010.12.002</a>
-
-
+<br>
+[33] Yun, H., Liang, B., Qiu, J., Zhang, L., Zhao, Y., Jiang, J., & Wang, A. (2017). Functional characterization of a novel amidase involved in biotransformation of triclocarban and its dehalogenated congeners in Ochrobactrum sp. TCC-2. Environmental Science & Technology, 51(1), 291-300.<a href=”\https://doi.org/10.1021/acs.est.6b04885”>
+\https://doi.org/10.1021/acs.est.6b04885</a><br>
    
 </div>
 </div>
