--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -66,12 +66,13 @@
                 Bioreactor Modeling
               </a>
             </li>
+            <!--
             <li>
               <a href="#section12" class="nav-link link-dark">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
                 Introduction
               </a>
-            </li>
+            </li>-->
             <li>
               <a href="#section13" class="nav-link link-dark">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
@@ -92,7 +93,7 @@
             <li>
               <a href="#section16" class="nav-link link-dark">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
-                Conclusion:
+                References:
               </a>
             </li>
             <li>-->
