--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -1,6 +1,10 @@
 {% extends "my-layout.html" %}
 
 {% block sidebar_content %}
+  <div class="content-container" style="display:flex;">
+                <div class="sidebar">
+                    <div class="d-flex flex-column flex-shrink-0 p-1" id="saveme" style="width: 100px; height: 100vh; overflow-x: auto; position:fixed; background-color: #ffffff;">
+                    <hr>
 <ul class="nav nav-pills flex-column mb-auto">
   <li class="nav-item">
     <a href="#section1" class="nav-link link-dark" aria-current="page">
