--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -619,6 +619,7 @@ for n=1(Cycle 1)
 <br> This is the mass balance of cycle 2 adsorption kinetics<br>
 <img style="width: 55%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/model-dl/ur-mom.png" class="img-fluid rounded mx-auto d-block mt-4">
 <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/model-dl/ilora-1.png" class="img-fluid rounded mx-auto d-block mt-4">
+<img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-26.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
 <figcaption style="text-align:center"><i> Python code for the calculation of number of cycles that can treat 21 ppm of TCC.</i></figcaption>
 <br><br>
 Value of n = 46, where n is the number of cycles that can treat 21 ppm of TCC with 1211 g of biochar. <br><br>
