Adding the banner to the layout

--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -36,14 +36,9 @@
 
     <div class="banner flex-grow-1 p-3" style="flex:1">
       <!-- Page Header -->
-      <header>
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-1.svg" />
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-2.svg" />
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-3.svg" />
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-4.svg" />
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-5.svg" id="shape" />
+      <div class="custom-banner">
         <h1>{% block heading %}{% endblock %}</h1>
-      </header>
+      </div>
 
       <!-- Content-->
       {% block page_content %}
