--- a/wiki/pages/attributions.html
+++ b/wiki/pages/attributions.html
@@ -29,7 +29,7 @@
     <div class="banner flex-grow-1" style="flex:1">
       <!-- Page Header -->
       <div class="custom-banner">
-        <h1>{% block heading %}{% endblock %}</h1>
+        <h1>{% block heading %} Attributions {% endblock %}</h1>
       </div>
 
       <!-- Content-->
