adding banner to the team

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -29,15 +29,9 @@
 
     <div class="banner flex-grow-1" style="flex:1">
       <!-- Page Header -->
-      <header>
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-1.svg" />
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-2.svg" />
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-3.svg" />
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-4.svg" />
-        <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-5.svg" id="shape" />
-        <h1>{% block heading %}Meet the team{% endblock %}</h1>
-      </header>
-
+      <div class="custom-banner">
+        <h1>{% block heading %}{% endblock %}</h1>
+      </div>
       <!-- Content-->
 
        <div class="gallery">
