adding meet the team banner

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -30,7 +30,7 @@
     <div class="banner flex-grow-1" style="flex:1">
       <!-- Page Header -->
       <div class="custom-banner">
-        <h1>{% block heading %}{% endblock %}</h1>
+        <h1>{% block heading %}Meet the Team{% endblock %}</h1>
       </div>
       <!-- Content-->
 
