--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -52,7 +52,7 @@
                     <p class="mt-5 sub-stuff"><i>“Inclusive growth should not be a mere slogan but a fundamental driving force for sustainable development.”</i><br>
 - Mr. Pranab Mukherjee, Former President of India.<br><br> </p>
                 <figure>
-                    <img class="img-fluid" style="scale:0.5;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
+                    <img class="img-fluid" style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
                     <figcaption style="text-align:center">This mind map depicts how we’ve aimed to make our project inclusive to different communities</figcaption>
                 </figure>
 
@@ -68,9 +68,9 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
                 <p class="mt-5 MAIN-STUFF" id="section2"><b>Our Team</b></p>
 
             <p class="mt-5 sub-stuff"> Our team members come from different states of India, adding great diversity to our team. Being inclusive of the community has been one of our primary goals from the very beginning of the project. During the initial ideation of the project, we put in considerable effort to understand the preferred pronouns of our fellow teammates. The diversity that we bring to the table with various cultures and regions has been something of great help to us, providing us a chance to learn more about the others.<br> </p>
-
-            <img class="img-fluid" style="scale:0.69;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/team-photo-2.jpg"> 
-
+            <figure>
+              <img class="img-fluid" style="width: 40%; height: auto;;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/team-photo-2.jpg"> 
+            </figure>
             <p class="mt-5 MAIN-STUFF" id="section3"><b>Crossing Language Barriers</b></p>
 
             <p class="mt-5 sub-stuff"> India has 22 official languages with hundreds of regional dialects with its own layers of dynamics in cultural and social diversity. Access to scientific information should not be restricted by these language barriers. Regional languages bridge these gaps, ensuring individuals from diverse linguistic backgrounds can access and contribute to scientific knowledge. We can empower communities to understand and apply scientific findings to their contexts, fostering sustainable practices and development.<br> </p>
@@ -85,22 +85,22 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
             <div id="carouselExampleControls1" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/dkshippocampus.jpeg" style="scale:0.3;" class="d-block w-100" >
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/dkshippocampus.jpeg" style="width: 30%; height: auto;" class="d-block w-100" >
                     </div>
                     <div class="carousel-item">
-                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/govtschoolmadurai.jpeg" style="scale:0.3;" class="d-block w-100">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/govtschoolmadurai.jpeg" style="width: 30%; height: auto;" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/srikrishnamandir.jpeg" style="scale:0.3;" class="d-block w-100" >
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/srikrishnamandir.jpeg" style="width: 30%; height: auto;" class="d-block w-100" >
                     </div>
                     <div class="carousel-item">
-                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/meeting-with-mr-tarini-prasad-barik-nature-conservancy-consultancy-pvt-ltd-bhubaneswar-odisha-1.png" style="scale:0.3;" class="d-block w-100" >
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/meeting-with-mr-tarini-prasad-barik-nature-conservancy-consultancy-pvt-ltd-bhubaneswar-odisha-1.png" style="width: 30%; height: auto;" class="d-block w-100" >
                     </div>
                     <div class="carousel-item">
                     <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/meeting-with-mr-s-k-swain-water-treatment-industry-1.png" style="scale:0.3;" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/boardhighschool.jpeg" style="scale:0.3;" class="d-block w-100" >
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/boardhighschool.jpeg" style="width: 30%; height: auto;" class="d-block w-100" >
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
@@ -124,22 +124,22 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
             <div id="carouselExampleControls2" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare1.jpeg" style="scale:0.5;"  class="d-block w-100" alt="...">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare1.jpeg" style="width: 50%; height: auto;"  class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare2.jpeg"style="scale:0.5;" class="d-block w-100" alt="...">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare2.jpeg" style="width: 50%; height: auto;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare3.jpeg"style="scale:0.5;" class="d-block w-100" alt="...">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare3.jpeg" style="width: 50%; height: auto;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare4.jpeg"style="scale:0.5;" class="d-block w-100" alt="...">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare4.jpeg" style="swidth: 50%; height: auto;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare5.jpeg"style="scale:0.5;" class="d-block w-100" alt="...">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare5.jpeg" style="width: 50%; height: auto;" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare6.jpeg"style="scale:0.5;" class="d-block w-100" alt="...">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare6.jpeg" style="width: 50%; height: auto;" class="d-block w-100" alt="...">
     </div>
   </div>
 
@@ -182,19 +182,19 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
       <div id="carouselExampleControls3" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle1.jpeg" style="scale:0.3;" class="d-block w-100" >
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle1.jpeg" style="width: 30%; height: auto;" class="d-block w-100" >
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle2.jpeg" style="scale:0.3;" class="d-block w-100" >
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle2.jpeg" style="width: 30%; height: auto;" class="d-block w-100" >
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle3.jpeg" style="scale:0.3;" class="d-block w-100" >
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle3.jpeg" style="width: 30%; height: auto;" class="d-block w-100" >
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticl4.jpeg" style="scale:0.3;" class="d-block w-100">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticl4.jpeg" style="width: 30%; height: auto;" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle5.jpeg" style="scale:0.3;" class="d-block w-100" >
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle5.jpeg" style="width: 30%; height: auto;" class="d-block w-100" >
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
@@ -232,9 +232,9 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
   <li>We hosted a “BioArt Competition”, in collaboration with IIT-Delhi, based on the applications of synthetic biology and solving real-world problems using traditional, indigenous and folk art styles. This helped encourage our rich heritage and brought out the diversity among the nations. The participants showcased their bioart while also describing the thoughts behind their design.</li>
 </ul>
 <figure>
-<img class="img-fluid"  style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/bioart-competition.jpeg">
+<img class="img-fluid"  style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/bioart-competition.jpeg">
 <figcaption style="text-align:center">BioArt Competition held in collaboration with team iGEM IIT-Delhi </figcaption>
-<img class="img-fluid"  style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/education/img-20230920-221915-omkar-prabhu-2.jpg">
+<img class="img-fluid"  style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/education/img-20230920-221915-omkar-prabhu-2.jpg">
 <figcaption style="text-align:center">Omkar Prabhu's Artwork: Winner of BioArt Competition</figcaption>
 
 </figure>
