--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -52,7 +52,7 @@
                     <p class="mt-5 sub-stuff"><i>“Inclusive growth should not be a mere slogan but a fundamental driving force for sustainable development.”</i><br>
 - Mr. Pranab Mukherjee, Former President of India.<br><br> </p>
                 <figure>
-                    <img class="img-fluid" style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
+                    <img class="img-responsive rounded mx-auto d-block mt-4" style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
                     <figcaption style="text-align:center">This mind map depicts how we’ve aimed to make our project inclusive to different communities</figcaption>
                 </figure>
 
@@ -69,7 +69,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
             <p class="mt-5 sub-stuff"> Our team members come from different states of India, adding great diversity to our team. Being inclusive of the community has been one of our primary goals from the very beginning of the project. During the initial ideation of the project, we put in considerable effort to understand the preferred pronouns of our fellow teammates. The diversity that we bring to the table with various cultures and regions has been something of great help to us, providing us a chance to learn more about the others.<br> </p>
             <figure>
-              <img class="img-fluid" style="width: 40%; height: auto;;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/team-photo-2.jpg"> 
+              <img class="img-responsive rounded mx-auto d-block mt-4" style="width: 40%; height: auto;;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/team-photo-2.jpg"> 
             </figure>
             <p class="mt-5 MAIN-STUFF" id="section3"><b>Crossing Language Barriers</b></p>
 
@@ -173,8 +173,9 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
       <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
       <li>We also posted a “Series on Synthetic Biology Applications” which had three episodes highlighting the latest unique advancements in synthetic biology to spark curiosity in the minds of our fellow social media users.</li>
       </ul>
-
-      <img class="mt-5 img-fluid" style="scale:0.33;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbioseries1jpg.jpg">
+      <figure>
+      <img class="img-responsive rounded mx-auto d-block mt-4" style="widht:33%; height:auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbioseries1jpg.jpg">
+      </figure>
       <ul  style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
       <li>Not only this, we also had a set of five articles published on Medium relating to various aspects of synthetic biology. It would help broaden the horizons of the general public around us and emphasize how synthetic biology is not just limited to GMOs, but also has applications in numerous fields.</li>
       </ul>
@@ -215,9 +216,9 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
 
 <figure>
-  <img class="img-fluid" style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/conclave-1.png">
+  <img class="img-responsive rounded mx-auto d-block mt-4" style="widht:33%; height:auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/conclave-1.png">
   <figcaption style="text-align:center"> 3-Day Bioremediation conclave held in collaboration with team iGEM IIT-Delhi </figcaption>
-  </figure>
+</figure>
 
 <p class="mt-5 MAIN-STUFF" id="section6"><b>Interconnectivity between Science and Art</b></p>
 <p class="mt-5 sub-stuff"> Science, like any other field, involves creativity and innovation. Science is incorporated everywhere, be it music or artwork. In an attempt to interact with the non-scientific community and bring out the creative aspects of synthetic biology, our team put in substantial efforts.<br> </p>
@@ -232,11 +233,10 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
   <li>We hosted a “BioArt Competition”, in collaboration with IIT-Delhi, based on the applications of synthetic biology and solving real-world problems using traditional, indigenous and folk art styles. This helped encourage our rich heritage and brought out the diversity among the nations. The participants showcased their bioart while also describing the thoughts behind their design.</li>
 </ul>
 <figure>
-<img class="img-fluid"  style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/bioart-competition.jpeg">
+<img class="img-responsive rounded mx-auto d-block mt-4"  style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/bioart-competition.jpeg">
 <figcaption style="text-align:center">BioArt Competition held in collaboration with team iGEM IIT-Delhi </figcaption>
-<img class="img-fluid"  style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/education/img-20230920-221915-omkar-prabhu-2.jpg">
+<img class="img-responsive rounded mx-auto d-block mt-4"  style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/education/img-20230920-221915-omkar-prabhu-2.jpg">
 <figcaption style="text-align:center">Omkar Prabhu's Artwork: Winner of BioArt Competition</figcaption>
-
 </figure>
         </div>
     </div>
