--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -174,7 +174,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
       <li>We also posted a “Series on Synthetic Biology Applications” which had three episodes highlighting the latest unique advancements in synthetic biology to spark curiosity in the minds of our fellow social media users.</li>
       </ul>
       <figure>
-      <img class="img-responsive rounded mx-auto d-block mt-4" style="widht:33%; height:auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbioseries1jpg.jpg">
+      <img class="img-responsive rounded mx-auto d-block mt-4" style="width:33%; height:auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbioseries1jpg.jpg">
       </figure>
       <ul  style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
       <li>Not only this, we also had a set of five articles published on Medium relating to various aspects of synthetic biology. It would help broaden the horizons of the general public around us and emphasize how synthetic biology is not just limited to GMOs, but also has applications in numerous fields.</li>
@@ -216,7 +216,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
 
 <figure>
-  <img class="img-responsive rounded mx-auto d-block mt-4" style="widht:33%; height:auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/conclave-1.png">
+  <img class="img-responsive rounded mx-auto d-block mt-4" style="width:33%; height:auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/conclave-1.png">
   <figcaption style="text-align:center"> 3-Day Bioremediation conclave held in collaboration with team iGEM IIT-Delhi </figcaption>
 </figure>
 
