--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -226,9 +226,9 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
 <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
   <li>We curated a music composition from our TccA amidase enzyme sequence by converting into notes using a software. We put together a video that played this composition in the background while showing our protein structure with triclocarban (TCC) docked in it. It further explained the mechanism behind the making of this music and helped provide an understanding about amino acids and codons.<br><br>
-<figure style="text-align:center">
+<figure style="text-align:center;">
   <iframe title="MIT-MAHE: Music Composition of Amidase (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/59fd1533-80ac-4416-bb5c-2a6e73795c86" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
-  <figcaption style="text-align:center"> Music Composition of our TccA Amidase </figcaption>
+  <figcaption style="text-align:center;"> Music Composition of our TccA Amidase </figcaption>
 </figure>
   
   </li>
