italiscing the captions

--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -53,7 +53,7 @@
 - Mr. Pranab Mukherjee, Former President of India.<br><br> </p>
                 <figure>
                     <img class="img-responsive rounded mx-auto d-block mt-4" style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
-                    <figcaption style="text-align:center">This mind map depicts how we’ve aimed to make our project inclusive to different communities</figcaption>
+                    <figcaption style="text-align:center"><i>This mind map depicts how we’ve aimed to make our project inclusive to different communities</i></figcaption>
                 </figure>
 
              <p class="mt-5 sub-stuff"> Our team has attempted to explore what groups are <b>underrepresented</b> in science. Particularly in the country that our team is from, India. Through our exploration, we have identified multiple groups traditionally underrepresented in science due to social stigma and financial barriers that prevent them from crossing the threshold and bridging the gap to access scientific avenues.<br><br>
@@ -217,7 +217,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
 <figure>
   <img class="img-responsive rounded mx-auto d-block mt-4" style="width:33%; height:auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/conclave-1.png">
-  <figcaption style="text-align:center"> 3-Day Bioremediation conclave held in collaboration with team iGEM IIT-Delhi </figcaption>
+  <figcaption style="text-align:center"> <i> 3-Day Bioremediation conclave held in collaboration with team iGEM IIT-Delhi </i> </figcaption>
 </figure>
 
 <p class="mt-5 MAIN-STUFF" id="section6"><b>Interconnectivity between Science and Art</b></p>
@@ -228,7 +228,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
   <li>We curated a music composition from our TccA amidase enzyme sequence by converting into notes using a software. We put together a video that played this composition in the background while showing our protein structure with triclocarban (TCC) docked in it. It further explained the mechanism behind the making of this music and helped provide an understanding about amino acids and codons.<br><br>
 <figure style="text-align:center;">
   <iframe title="MIT-MAHE: Music Composition of Amidase (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/59fd1533-80ac-4416-bb5c-2a6e73795c86" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
-  <figcaption style="text-align:center;"> Music Composition of our TccA Amidase </figcaption>
+  <figcaption style="text-align:center;"> <i>Music Composition of our TccA Amidase </i></figcaption>
 </figure>
   
   </li>
@@ -236,9 +236,9 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 </ul>
 <figure>
 <img class="img-responsive rounded mx-auto d-block mt-4"  style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/bioart-competition.jpeg">
-<figcaption style="text-align:center">BioArt Competition held in collaboration with team iGEM IIT-Delhi </figcaption>
+<figcaption style="text-align:center"> <i>BioArt Competition held in collaboration with team iGEM IIT-Delhi</i> </figcaption>
 <img class="img-responsive rounded mx-auto d-block mt-4"  style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/education/img-20230920-221915-omkar-prabhu-2.jpg">
-<figcaption style="text-align:center">Omkar Prabhu's Artwork: Winner of BioArt Competition</figcaption>
+<figcaption style="text-align:center"> <i> Omkar Prabhu's Artwork: Winner of BioArt Competition </i> </figcaption>
 </figure>
         </div>
     </div>
