adding title for the map

--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -289,7 +289,7 @@
   <figcaption style="text-align:center"> <i> Map of India depicting the number of stakeholder interactions across different states </i> </figcaption>
 </figure>
 
-<p class="mt-5"></p>
+<p class="mt-5 MAIN-STUFF"> Our Stakeholder Interactions </p>
 
 <ul class="timeline">
 
@@ -824,6 +824,8 @@
   <li class="clearfix no-float"></li>
 
 </ul>
+
+
 
 
 <div class="modal fade" id="ihp-modal-1" tabindex="-1" aria-labelledby="ihp-modal-1Label" aria-hidden="true"
