--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -37,7 +37,7 @@
     <div class="banner flex-grow-1 p-3" style="flex:1">
       <!-- Page Header -->
       <div class="custom-banner">
-        <h1>{% block heading %}{% endblock %}</h1>
+        <h1 class="banner-head">{% block heading %}{% endblock %}</h1>
       </div>
 
       <!-- Content-->
